@@ -1,6 +1,8 @@
-noinst_HEADERS = scheme.h
+noinst_HEADERS = catch.h \
+	scheme.h
 
 noinst_LIBRARIES = libscheme.a
 
-libscheme_a_SOURCES = scheme.cpp
+libscheme_a_SOURCES = catch.cpp \
+	scheme.cpp
 
